[package]
name = "sss"
version = "0.1.0"
authors = ["Alexander McKinney <alexander.f.mckinney@durham.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.1"
toml = "0.5"
serde = "1.0.114"
serde_derive = "1.0.114"
